added subfolder for utils and used add_subdirectory

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
 cmake_minimum_required(VERSION 3.2)
 project(MyApp)
-add_executable(myExe a.cpp)
+add_subdirectory(utils)
+add_executable(myExe a.cpp utils/math.cpp)
+
