--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.2)
 project(MyApp)
 add_subdirectory(utils)
-add_executable(myExe a.cpp utils/math.cpp)
+add_executable(myExe main.cpp utils/math.cpp)
 
